<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#CCE7F4"
    tools:context=".PetunjukActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />



        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">



            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="370dp"
                android:padding="16dp">



                    <TextView
                        android:id="@+id/umb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Apa itu UMB ?"
                        android:textColor="#2196F3"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/umb"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/umb"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/cara"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/deskripsi"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Penjelasan Kemampuan"
                        android:textColor="#2196F3"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cara"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Berikut adalah penjelasan tentang 8 kemampuan"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/buka"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/step"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria1"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/kerjakan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/buka"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria2"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/selesai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/kerjakan"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria3"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/alu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/selesai"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria4"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/haar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/alu"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria5"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/sess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/haar"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria6"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/seless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sess"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria7"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/sesai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seless"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/kriteria8"
                        android:textSize="20dp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal" >


            <Button
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/button"
                android:fontFamily="sans-serif-black"
                android:text="Back"
                android:id="@+id/InfoBack"
                android:textColor="#fff"
                android:textSize="22dp" />


        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />



    </LinearLayout>
</LinearLayout>